# virtualenvpruner

./: Cargo.toml  README.md
src/: main.rs  venvs.rs
