[package]
name = "virtualenvpruner"
version = "0.1.0"
edition = "2021"


# bin is the entry point for the binary
[[bin]]
name = "venvpruner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
console = "0.15.8"
dirs = "5.0.1"
human_bytes = "0.4.3"
indicatif = "0.17.8"
inquire = "0.7.5"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
walkdir = "2.5.0"
